--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div>
-    <div id="app"></div>
+    <div id="carousel"></div>
   </div>
   <script type="text/javascript" src="bundle.js"></script> 
 </body>
